--- a/src/main/resources/static/hospital-insert.html
+++ b/src/main/resources/static/hospital-insert.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Hospital Form</title>
 </head>
 <body>
+
+
 
 </body>
 </html>
