--- a/src/main/resources/static/hospital-insert.html
+++ b/src/main/resources/static/hospital-insert.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8">
     <title>Hospital Form</title>
 </head>
+
+<link rel="stylesheet" href="hospitalInsert.css">
+
 <body>
 
+ <h1>Hospital Information Form</h1>
 
+<form action="hospital-insert.html" method="get">
 
+    <label for="hospitalName">HospitalName:</label>
+    <input type="text" name="hospitalName" id="hospitalName" placeholder="hospitalName">
+    <br><br>
+
+    <label for="hospitalAddress">Hospital Address:</label>
+    <input type="text" name="hospitalAddress" id="hospitalAddress" placeholder="address">
+    <br><br>
+
+    <label for="emailId">emailId:</label>
+    <input type="email" name="emailId" id="emailId" placeholder="emailId">
+    <br><br>
+
+    <label for="contactNo">contactNo:</label>
+    <input type="number" name="contactNo" id="contactNo" placeholder="contactNo">
+    <br><br>
+    <input type="submit" value="submit">
+    <input type="reset" value="reset">
+
+</form>
 </body>
 </html>
