--- a/src/main/resources/static/department-insert.html
+++ b/src/main/resources/static/department-insert.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="departmentInsert.css">
 <body>
 
-<h1> Department Information Form</h1>
+<h1> Department Information</h1>
 
 <form action="department-insert.html" method="get">
 
