style.css updated

--- a/src/main/resources/static/appointment-insert.html
+++ b/src/main/resources/static/appointment-insert.html
@@ -5,7 +5,7 @@
     <title>Appointment form</title>
 </head>
 
-<link rel="stylesheet" href="appointmentInsert.css">
+<link rel="stylesheet" href="style.css">
 <body>
 
 <h1>Appointment Information</h1>
