--- a/src/main/resources/static/department-insert.html
+++ b/src/main/resources/static/department-insert.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Department Form</title>
 </head>
-<link rel="stylesheet" href="departmentInsert.css">
+<link rel="stylesheet" href="style.css">
 <body>
 
 <h1> Department Information</h1>
