--- a/src/main/resources/static/doctor-insert.html
+++ b/src/main/resources/static/doctor-insert.html
@@ -5,7 +5,7 @@
     <title>Doctor form</title>
 </head>
 
-<link rel="stylesheet" href="doctorInsert.css">
+<link rel="stylesheet" href="style.css">
 <body>
 
 <h1>Doctor Information Form</h1>
