--- a/src/main/resources/static/hospital-insert.html
+++ b/src/main/resources/static/hospital-insert.html
@@ -5,7 +5,7 @@
     <title>Hospital Form</title>
 </head>
 
-<link rel="stylesheet" href="hospitalInsert.css">
+<link rel="stylesheet" href="style.css">
 
 <body>
 
