--- a/src/main/resources/static/person-insert.html
+++ b/src/main/resources/static/person-insert.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Person Form</title>
 </head>
-<link rel="stylesheet" href="personInsert.css">
+<link rel="stylesheet" href="style.css">
 <body>
 <h1>Person Information Form</h1>
 
