--- a/src/main/resources/static/billing-insert.html
+++ b/src/main/resources/static/billing-insert.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Billing Form</title>
 </head>
-<link rel="stylesheet" href="billingInsert.css">
+<link rel="stylesheet" href="style.css">
 <body>
  <h1>Billing Information</h1>
 
