--- a/src/main/resources/static/prescription-insert.html
+++ b/src/main/resources/static/prescription-insert.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Prescription Form</title>
 </head>
-<link rel="stylesheet" href="prescriptionInsert.css">
+<link rel="stylesheet" href="style.css">
 <body>
    <h1>Prescription Information</h1>
 
